@@ -1057,7 +1057,7 @@ is_deeply (sort_reply(Installcheck::Rest::remove_source_line($reply)),
                                                        'orig_kb' => '0',
                                                        'native_crc' => '00000000:0',
                                                        'client_crc' => '00000000:0',
-                                                       'holding_file' => '/tmp/amanda/installchecks/holding/20080414144444/otherbox._lib',
+                                                       'holding_file' => "$Installcheck::TMP/holding/20080414144444/otherbox._lib",
                                                        'sec' => '0',
                                                        'server_crc' => '00000000:0'
                                                      }
@@ -1303,7 +1303,7 @@ is_deeply (sort_reply(Installcheck::Rest::remove_source_line($reply)),
                                                        'partnum' => '1',
                                                        'server_crc' => '00000000:0',
                                                        'sec' => '0',
-                                                       'holding_file' => '/tmp/amanda/installchecks/holding/20080414144444/otherbox._lib',
+                                                       'holding_file' => "$Installcheck::TMP/holding/20080414144444/otherbox._lib",
                                                        'client_crc' => '00000000:0',
                                                        'status' => 'OK',
                                                        'orig_kb' => '0',
